Add map jupyter notebook with 2 interactive sheepshead layers

--- a/jupyter/Pipfile
+++ b/jupyter/Pipfile
@@ -6,6 +6,10 @@ name = "pypi"
 [packages]
 jupyterlab = "*"
 pandas = "*"
+geopandas = "*"
+folium = "*" 
+matplotlib = "*" 
+mapclassify = "*"
 
 [dev-packages]
 
